# ml-benchmark

./: Makefile  README.md  client.py  main.py  pyproject.toml
benchmark/: __init__.py  base.py  pytorch.py  schemas.py
hardware/: __init__.py
